<resources>
    <string name="app_name">Barber</string>
    <string name="action_sign_in_short">SIGN IN</string>
    <string name="btn_link_to_login">SIGN UP</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="title_activity_customer_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_user_home_page">UserHomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="my_appointment">My Appointment</string>
    <string name="profile">profile</string>
    <string name="About">About</string>
    <string name="about_us">About Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="change_password">Change Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_owner">Owner</string>
    <string name="title_activity_saloon_location">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_booking">Booking</string>
    <string name="title_activity_maps_booking">Map</string>


    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_nearby_saloon_list">NearbySaloonList</string>
    <string name="title_activity_saloon_deatils">SaloonDeatils</string>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="spinner_title">Gender</string>
</resources>
