<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/background"
    tools:context=".ResetPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="50dp">

        <TextView
            android:fontFamily="@font/caveat_brush"
            android:id="@+id/forgettext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/lbl_forgot_password"
            android:textColor="@android:color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/Instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/forgettext"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/forgot_password_msg"
            android:textColor="@android:color/black"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Instructions"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:background="@drawable/shapeemail"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:layout_centerHorizontal="true"
            android:drawablePadding="10dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textColorHighlight="@android:color/black"/>

        <!-- Login Button -->
        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginTop="20dip"
            android:background="#000"
            android:text="@string/btn_reset_password"
            android:textColor="#eeeeee" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_reset_password"
            android:layout_marginTop="10dp"
            android:onClick="backToSignup"
            android:background="#000"
            android:text="@string/btn_back"
            android:textColor="#eee" />

    </RelativeLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</RelativeLayout>