<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/background"
    tools:context=".Signin_activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="150dp">
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="15dp"
            android:background="@drawable/shapeemail"
            android:drawableLeft="@drawable/ic_email_grey_24dp"
            android:drawablePadding="10dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textColorHint="@android:color/black"
            android:textColorHighlight="@android:color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <EditText
            android:id="@+id/password"
            android:layout_below="@id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:layout_margin="15dp"
            android:padding="15dp"
            android:background="@drawable/shapeemail"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20dp"
            android:textColorHighlight="@android:color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_below="@id/password"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="16dp"
            android:background="#000"
            android:text="@string/action_sign_in_short"
            android:onClick="SignIn"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#eee"
            android:textStyle="bold"
            android:textSize="16dp"/>


        <!-- Link to Login Screen -->
        <Button
            android:id="@+id/btn_reset_password"
            android:layout_below="@id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:onClick="launchResetPasswordActivity"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="17dp"
            android:textAllCaps="false"
            android:textColor="#000" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_below="@id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/btn_link_to_login"
            android:onClick="gotoRegister"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="16dp" />

    </RelativeLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="25dp"
        android:visibility="gone" />
</RelativeLayout>